Update logs-oracle (#360)
* Update logs-oracle
* Install deps in docker image